# scoped-async-macro

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: scoped_async_bench.rs
src/: lib.rs
